# presenton

./: .gitignore  AGENTS.md  CODEBASE_DESIGNS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  EXPORTS.md  FEAT-EXPANSION.md  FEATURE-BUILDING.md  LICENSE  MEM0_MEMORY_EXPLANATION.md  NOTICE  README.md  REFACTOR-PIVOT.MD  TROUBLESHOOTING.md  VISION.md  docker-compose.yml  main-workflow.md  nginx.conf  package.json  stakeholder.md  start.js  test-local.sh
servers/fastapi/: dev.db  mcp_server.py  migrations.py  openai_spec.json  pyproject.toml
servers/fastapi/api/: main.py  middlewares.py
servers/fastapi/constants/: elevenlabs_voices.py  ipa_dictionary.py  llm.py  narration.py  presentation.py
servers/fastapi/enrichers/: __init__.py  activities.py  base.py  connectivity.py  context.py  cuisine.py  deals.py  destination_intel.py  dining.py  events.py  flights.py  hotels.py  images.py  itinerary_scheduler.py  language.py  maps.py  overlay.py  pipeline.py  pricing.py  prompt_parser.py  registry.py  reviews.py  runner.py  transport.py  videos.py  visa_health.py  weather.py
servers/fastapi/enums/: llm_provider.py  tone.py  webhook_event.py
servers/fastapi/models/: generate_presentation_request.py  image_prompt.py  pptx_models.py  presentation_outline_model.py  presentation_with_slides.py  user_config.py
servers/fastapi/services/: auto_ipa_service.py  database.py  elevenlabs_service.py  image_generation_service.py  llm_client.py  mem0_oss_memory.py  mem0_presentation_memory_service.py  pptx_presentation_creator.py  viator_client.py  (+3 more)
(+457 files in other folders)
